Previous to behaviors

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,5 @@
 # Miscellaneous
+*.lock
 *.class
 *.log
 *.pyc
@@ -38,7 +39,12 @@ app.*.symbols
 # Obfuscation related
 app.*.map.json
 
+/windows/
+/web/
+
 # Android Studio will place build artifacts here
 /android/app/debug
 /android/app/profile
 /android/app/release
+
+
